DC31/k8s-manifests/pods.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  namespace: pls-dont-hack-me
spec:
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: ubuntu:22:04
        command: ["/bin/sleep", "infinity"]
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
    serviceAccountName: read-secrets
