DC31/k8s-manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ui
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: ngrok
spec:
  ingressClassName: ngrok
  rules:
    - host: ${NGROK_SUBDOMAIN}.ngrok.io
      http:
        paths:
        - path: /prometheus
          pathType: Prefix
          backend:
            service:
              name: kind-prometheus-kube-prome-prometheus
              port: 
                number: 30000
